<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>HEVCBitstreamVersionSelector</class>
 <widget class="QDialog" name="HEVCBitstreamVersionSelector">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>202</width>
    <height>237</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Select HM Version</string>
  </property>
  <layout class="QVBoxLayout" name="verticalLayout">
   <item>
    <widget class="QGroupBox" name="groupBox">
     <property name="title">
      <string>HM Version</string>
     </property>
     <layout class="QHBoxLayout" name="horizontalLayout_2">
      <item>
       <layout class="QHBoxLayout" name="horizontalLayout">
        <item>
         <layout class="QVBoxLayout" name="verticalLayout_2">
          <item>
           <widget class="QRadioButton" name="version40">
            <property name="text">
             <string>HM 4.0</string>
            </property>
            <property name="checked">
             <bool>true</bool>
            </property>
           </widget>
          </item>
          <item>
           <widget class="QRadioButton" name="version52">
            <property name="enabled">
             <bool>true</bool>
            </property>
            <property name="text">
             <string>HM 5.2</string>
            </property>
           </widget>
          </item>
          <item>
           <widget class="QRadioButton" name="version100">
            <property name="enabled">
             <bool>true</bool>
            </property>
            <property name="text">
             <string>HM 10.0</string>
            </property>
           </widget>
          </item>
          <item>
           <widget class="QRadioButton" name="version120">
            <property name="text">
             <string>HM 12.0 or later</string>
            </property>
           </widget>
          </item>
         </layout>
        </item>
       </layout>
      </item>
     </layout>
    </widget>
   </item>
   <item>
    <widget class="QDialogButtonBox" name="buttonBox">
     <property name="orientation">
      <enum>Qt::Horizontal</enum>
     </property>
     <property name="standardButtons">
      <set>QDialogButtonBox::Ok</set>
     </property>
    </widget>
   </item>
  </layout>
 </widget>
 <resources/>
 <connections>
  <connection>
   <sender>buttonBox</sender>
   <signal>accepted()</signal>
   <receiver>HEVCBitstreamVersionSelector</receiver>
   <slot>accept()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>248</x>
     <y>254</y>
    </hint>
    <hint type="destinationlabel">
     <x>157</x>
     <y>274</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>buttonBox</sender>
   <signal>rejected()</signal>
   <receiver>HEVCBitstreamVersionSelector</receiver>
   <slot>reject()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>316</x>
     <y>260</y>
    </hint>
    <hint type="destinationlabel">
     <x>286</x>
     <y>274</y>
    </hint>
   </hints>
  </connection>
 </connections>
</ui>
